--- a/novi/demo/src/main/resources/application.properties
+++ b/novi/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/restoran
+spring.datasource.url=jdbc:mysql://localhost:3306/restoran2
 spring.datasource.username=root
 spring.datasource.password=kokosi123
 spring.datasource.useSSL=false
@@ -12,3 +12,5 @@ spring.jpa.hibernate.jdbc.batch_size=50
 spring.jpa.hibernate.connection.CharSet=utf8
 spring.jpa.hibernate.connection.characterEncoding=utf8
 spring.jpa.hibernate.connection.useUnicode=true
+
+server.port=8083
