Omogucena registracija sa slanjem mejla. Uradjen deo serverske provere

--- a/novi/demo/src/main/resources/application.properties
+++ b/novi/demo/src/main/resources/application.properties
@@ -13,4 +13,12 @@ spring.jpa.hibernate.connection.CharSet=utf8
 spring.jpa.hibernate.connection.characterEncoding=utf8
 spring.jpa.hibernate.connection.useUnicode=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=restoranisa0@gmail.com
+spring.mail.port=587
+spring.mail.password = isa12345
+spring.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 server.port=8083
